cleaning up some dependencies; use JAXB lib for base64 conversions
git-svn-id: http://falutin.net/svn/falutin/lux@1115 d2cdb213-60f8-4f1b-b4b2-f6b941818144